added the swagger get task
