# api/swagger/swagger.yaml
@@ -22,18 +22,18 @@ paths:
     # binds a127 app logic to a route
     x-swagger-router-controller: timebot_task
     put:
-      description: Returns 'Add Task' to the caller
+      description: Store the 'Task' in the system.
       # used as the method name of the controller
       operationId: taskput
       parameters:
         - name: name
           in: header
-          description: The name of the person to whom to say hello
+          description: The name of the task to be stored. 
           required: true
           type: string
-        - name: address
+        - name: submitterid
           in: header
-          description: The name of the person to whom to say hello
+          description: Your unique key to store against the task.
           required: true
           type: string        
       responses:
@@ -41,45 +41,68 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/TaskGetResponse"
+            $ref: "#/definitions/TaskPutResponse"
+        "400":
+          description: error
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ErrorResponse"  
         # responses may fall through to errors
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"   
-  /task{id}:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: timebot_task
+            $ref: "#/definitions/ErrorResponse"  
     get:
       description: Returns 'Add Task' to the caller
       # used as the method name of the controller
-      operationId: taskpost
+      operationId: taskget
       parameters:
         - name: id
-          in: path
-          description: The name of the person to whom to say hello
+          in: header
+          description: The name of the task to be stored. 
           required: true
-          type: integer
+          type: string   
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
             $ref: "#/definitions/TaskGetResponse"
+        "400":
+          description: error
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ErrorResponse"            
         # responses may fall through to errors
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"             
+            $ref: "#/definitions/ErrorResponse"                         
   /swagger:
     x-swagger-pipe: swagger_raw   
 # complex objects have schema definitions
 definitions:
+  TaskPutResponse:
+    type: "object"
+    required: 
+        - "message"
+        - "taskid"
+    properties:
+      message:
+        type: string
+      taskid:
+        type: string 
   TaskGetResponse:
+    type: "object"
+    required: 
+        - "message"
     properties:
       message:
         type: string
   ErrorResponse:
+    type: "object"
+    required: 
+        - "error"
     properties:
-      message:
+      error:
         type: string
